[package]
name = "dank"
version = "2.0.2"
authors = ["Eric Lemieux <eric@lemieuxdev.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
regex = "1"
rayon = "1.5"
handlebars = "3"
